Edição final do formulário

--- a/sobre.html
+++ b/sobre.html
@@ -7,53 +7,78 @@
     <link type="text/css" href="layout_formulario.css" rel="StyleSheet" />
     <script type="text/javascript" src="formulario.js"> </script>
 
+
+
+    <div id="menu">
+        <div id="itens">
+            <ul>
+                <li><a href="index.html">Formulário</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+            </ul>
+        </div>
+        <div id="contatos">
+            <ul>
+                <li>Flavia Rosa de Jesus</li>
+                <li><a href="https://www.linkedin.com/in/flavia-jesus-26464839"><img src="img/linkedin.jpg" width="20"
+                            width="20"><img></a></li>
+                <li><a href="https://github.com/flaveeenha"><img src="img/git.jpg" width="20" width="20"></img></a></li>
+            </ul>
+        </div>
+    </div>
 </head>
 
 <body>
-    <div id="container">
-
-       <!--  <div id="banner"></div> -->
-
-        <div id="menu">
-            <li><a href="formulario.html">Home</a></li>
-            <li><a href="sobre.html">Sobre</a></li>
-        </div>
-
-        <div id="corpo"> 
-<br>
-<h2><center>Flavia Rosa de Jesus</center></h2>
-<br><br>
-<p>Minha primeira experiência com tecnologia, foi em 2005, quando cursei Hardware. Desde então entendi o que eu queria.
-    <br>
-Iniciei minha carreira profissional em 2007 na multinacional Janssen (Johnson & Johnson), na area de tecnologia, permanecendo até 2012.
-<br>
-<img src="img/flavia.jpg" width="200" width="200" class="flavia">Fui responsável pelo suporte ao Sharepoint de todas as areas internas da Janssen, testes em sites institucionais, suporte à telefonia móvel junto à area comercial, entre diversas demandas do dia-a-dia. Minha interação foi bastante presente em todas as áreas da empresa. Apesar de muito nova, deixei a empresa em 2012 com uma grande bagagem.
-<br>
-Em 2012 conclui minha graduação em sistemas de informação e no mesmo ano entrei no Itau-Unibanco (Atec) como técnico em TI no Service Desk, inicialmente atendendo às demandas de telefonia fixa e móvel, e mais tarde atuando também em demandas de audio/videoconferêcia.
-<br>
-Em 2016, fiz parte da area da comunicação do Service Desk. Gerenciei conteúdos e desenvolvi parte do layout da base de conhecimento do Service Desk (sharepoint). Criei materias para treinamentos internos e para o dia-a-dia na central.
-<br>
-Em 2017, fui transferida para atendimento no COR (atendimento demanda sistêmicas da rede de agências) e atualmente estou na central AGE (atendimento gerentes PJ) desde 2018.
-<br>
-Estou disposta a aprender e desenvolver. Me dou bem com processos. Pessoalmente sou bastante criativa. Faço diversos trabalhos antesanais, sempre em busca do aprendizado constante. Sou aquarista por hobbie e apaixonada por animais.
-</p>
-<br>
-
-<h2><center>Links:</center></h2>
-
-<center>
-<a href="https://www.linkedin.com/in/flavia-jesus-26464839"><img src="img/linkedin.jpg" width="40" width="40"><img></a>
-<a href="https://github.com/flaveeenha"><img src="img/git.jpg" width="40" width="40"></img></a>
-</center>
-            
-
-        <div id="rodape">
+    <div id="corpo">
+        <div id="sobre">
+            <br>
+            <h2>
+                <center>Flavia Rosa de Jesus</center>
+            </h2>
+            <br><br>
+            <p>Minha primeira experiência com tecnologia, foi em 2005, quando cursei Hardware. Desde então entendi o que
+                eu queria.
+                <br>
+                Iniciei minha carreira profissional em 2007 na multinacional Janssen (Johnson & Johnson), na area de
+                tecnologia, permanecendo até 2012.
+                <br>
+                <img src="img/flavia.jpg" width="200" width="200" class="flavia">Fui responsável pelo suporte ao
+                Sharepoint de todas as areas internas da Janssen, testes em sites institucionais, suporte à telefonia
+                móvel junto à area comercial, entre diversas demandas do dia-a-dia. Minha interação foi bastante
+                presente em todas as áreas da empresa. Apesar de muito nova, deixei a empresa em 2012 com uma grande
+                bagagem.
+                <br>
+                Em 2012 conclui minha graduação em sistemas de informação e no mesmo ano entrei no Itau-Unibanco (Atec)
+                como técnico em TI no Service Desk, inicialmente atendendo às demandas de telefonia fixa e móvel, e mais
+                tarde atuando também em demandas de audio/videoconferêcia.
+                <br>
+                Em 2016, fiz parte da area da comunicação do Service Desk. Gerenciei conteúdos e desenvolvi parte do
+                layout da base de conhecimento do Service Desk (sharepoint). Criei materias para treinamentos internos e
+                para o dia-a-dia na central.
+                <br>
+                Em 2017, fui transferida para atendimento no COR (atendimento demanda sistêmicas da rede de agências) e
+                atualmente estou na central AGE (atendimento gerentes PJ) desde 2018.
+                <br>
+                Estou disposta a aprender e desenvolver. Me dou bem com processos. Pessoalmente sou bastante criativa.
+                Faço diversos trabalhos antesanais, sempre em busca do aprendizado constante. Sou aquarista por hobbie e
+                apaixonada por animais.
+            </p>
+            <br>
+            <h2>
+                <center>Links:</center>
+            </h2>
             <center>
-                <font face="arial" color="#000000"><br><i>2021 - Formulário</i></font>
+                <a href="https://www.linkedin.com/in/flavia-jesus-26464839"><img src="img/linkedin.jpg" width="40"
+                        width="40"><img></a>
+                <a href="https://github.com/flaveeenha"><img src="img/git.jpg" width="40" width="40"></img></a>
             </center>
         </div>
     </div>
-
 </body>
+
+<div id="rodape">
+    <center>
+        <font face="arial" color="#000000"><br><i>2021 - Formulário</i></font>
+    </center>
+</div>
 
 </html>
